AC_PREREQ([2.71])
AC_INIT([psn-gm], [0.0], [/dev/null])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_AUX_DIR([auxdir])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AM_INIT_AUTOMAKE([foreign subdir-objects])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
